--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,12 @@
 <resources>
     <string name="app_name">Hydro Report</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Senha</string>
-    <string name="action_sign_in">Entrar</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <!--Report Layout-->
+    <string name="opt_odor">Odor</string>
+    <string name="opt_cor">Cor</string>
+    <string name="opt_vazamento">Vazamento</string>
+    <string name="opt_gosto">Gosto</string>
+    <string name="opt_falta">Falta de água</string>
+    <string name="hint_descricao">Descrição</string>
+    <string name="btn_reportar">Reportar</string>
 </resources>
